# license_plate_detector

./: .gitignore  README.md
src/license_plate_detector_pkg/: CMakeLists.txt  gitignore  package.xml
src/license_plate_detector_pkg/certs/: .certificate.crt.swp  certificate1.crt  new_cert.crt  public_key.pem
src/license_plate_detector_pkg/data/: alpr_weights.pt  gnss_data.txt
src/license_plate_detector_pkg/launch/: license_plate_detector.launch
src/license_plate_detector_pkg/src/: gnss_publisher.py  image_publisher.py  license_plate_detector.py  license_plate_detector_preprocessor.py  license_plate_json_publisher.py  map_plotter.py  map_plotter2.py  mqtt_manager.py  private_key.pem
src/license_plate_detector_pkg/tools/: AES_Generate_keys.py  AES_client.py  AES_server.py
